--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NY Henry</title>
+    <meta
+      name="description"
+      content="NY Henry, a Ugandan EDM music producer and software engineer."
+    />
   </head>
   <body>
     <div id="root"></div>
